--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app_profilepage
+name: flutter_ucabmoji
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -44,6 +44,15 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - design/angry.png
+    - design/good.png
+    - design/sad.png
+    - design/smile.png
+    - design/ucabista.png
+    - design/camera_icon.png
+    - design/no_icon.png
+    - design/yes_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
