--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cloud_firestore:
   firebase_storage:
   image_picker:
+  firebase_database:
+  location:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,6 +55,7 @@ flutter:
     - design/camera_icon.png
     - design/no_icon.png
     - design/yes_icon.png
+    - design/modulo_Aulas.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
