--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="app_profilepage"
+        android:label="Ucabmoji"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
