--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>248422988570-loa63036on3nd1vq0lh0moqehgtrengg.apps.googleusercontent.com</string>
+	<string>248422988570-q725p49470k9h8sdkds6g3g3o8jku61s.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.248422988570-loa63036on3nd1vq0lh0moqehgtrengg</string>
+	<string>com.googleusercontent.apps.248422988570-q725p49470k9h8sdkds6g3g3o8jku61s</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBY87hZjbqEbQ0yEv1EigGz4LFxSFeO0Ao</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,23 +17,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.appProfilepage</string>
+	<string>com.ucabmoji.final</string>
 	<key>PROJECT_ID</key>
 	<string>proyecto-ucabmoji</string>
 	<key>STORAGE_BUCKET</key>
 	<string>proyecto-ucabmoji.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:248422988570:ios:41344caa95a24977</string>
+	<string>1:248422988570:ios:cc6761f1f1c24eae</string>
 	<key>DATABASE_URL</key>
 	<string>https://proyecto-ucabmoji.firebaseio.com</string>
 </dict>
