--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_launcher_icons:
+
+flutter_icons:
+  image_path: "design/icon2.png"
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +55,8 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
+    - design/icon2.png
+
     - design/angry.png
     - design/good.png
     - design/sad.png
